add comments section

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
             <div class="row">
                 <div class="col">
                     <hgroup>
-                        <h1>Toast Magazine</h1>
-                        <h2>Paradigm Shift | The Geodesic Dome</h2>
+                        <h2>Toast Magazine</h2>
+                        <h1>Paradigm Shift | The Geodesic Dome</h1>
                         <h3>Arts &amp; Culture</h3>
                     </hgroup>
                 </div>
@@ -29,7 +29,7 @@
                 <div class="col"><img class="img-fluid" src="./img/scotland-01.jpg" alt="A dirt road running through a remote part of Scotland"></div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-md-8">
+                <div class="col-md-10 col-lg-8">
                     <p class="lead">Late on a midweek evening in winter, five years ago, I came to Euston station to begin a journey from London to the most westerly point on the British mainland. The station concourse was cold but wonderfully empty; low-lit and calm in contrast with the usual daytime scurry. Dispersed commuters stood silently before the departure board while a handful in suits waited at the counters of closing delis for end-of-night stodge. I bought a few travel provisions, found my platform and, with the vast train already arrived and being loaded, followed a long row of carriages to my cabin for the night.</p>
                     <p class="quote">&quot;The dome unsurprisingly failed to rise,<br />and was good-naturedly termed the Supine Dome.&quot;</p>
                     <p>I was off to Fort William in the northwest of Scotland; the town that has for centuries served as a gateway to the Highlands and Islands. At Fort William I would pick up my rental car and drive on further west
@@ -40,7 +40,7 @@
                 <div class="col"><img class="img-fluid" src="./img/scotland-02.jpg" alt="A winding road with trees to the left and right and hills in the background"></div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-md-8">
+                <div class="col-md-10 col-lg-8">
                     <p>City lights receeded and London disappeared; a drink in the bar carriage, then to the quiet of the cabin, half a chapter of something, bed. I woke up, almost unbelievably, to imposing, picturesque hills and a passing loch. Early morning light plastered the little cabin window before the black out of a short tunnel. Back out by the water again, the view just stunning. Another tunnel fast approaching, its ferny bank powdered with snow—the first of the season, somewhere a long way from home.</p>
                     <p>The purpose of the trip was to be interviewed for a head gardener position in the remote part of Scotland that lay at the end of my 550 mile journey. I’d not even stay the night, although two would be spent getting there and back again. The garden was a restoration project: an attractive landscape overrun with acidic shrubs and tatty exotic cordylines—the fancies of its former proprietor now waning with neglect. A new owner had acquired the estate with grand plans in mind, ready to inject life back into the overgrown grounds. I was at that time eager for exactly this sort of horticultural challenge, whichever end of the country it might turn up.</p>
                 </div>
@@ -49,7 +49,7 @@
                 <div class="col"><img class="img-fluid" src="./img/scotland-03.jpg" alt="Scottish cattle. Two highland cattle and a calf in rural Scotland"></div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-md-8">
+                <div class="col-md-10 col-lg-8">
                     <p>At Fort William I woke fully in the sharp, clean air, further roused with coffee as I located the car in
                         the station parking lot. Empty road to Corran, short wait for the ferry, off across the peninsula through a palette of deep greens, red and blazing ochre. A tour of the garden, followed by lengthy chats around a large oak table; decisions to be made, hands shaken. The interview occupied the first half of the day, which left the second free to explore as much of the surrounding countryside as I could before boarding the evening train home. Over the course of that afternoon, in bright winter sunshine, I sauntered in a cheerful daze from one place to another, meandering slowly along the road back to Fort William. I took in magnificent coastline and loch beaches, damp plantation woods and mossy rivers, long empty fields before cloud-tipped mountains. I tried to imagine what it would be like to call these places home, to root into the landscape like the sturdy local cattle with their heavy Highland coats. I questioned my hardiness and my ability to grow a beard; the terrain seemed to demand a resilience tough as gorse needles.
                         ‘Expansive’ was a word that frequently came to mind also: each view as wonderfully unpopulated as, well, Euston station at midweek midnight. Room to breathe, room to think, landscapes to be lost in, yet find a train of thought.</p>
@@ -59,7 +59,7 @@
                 <div class="col"><img class="img-fluid" src="./img/scotland-04.jpg" alt="A stunning morning view of the Scottish highlands with a lake and some hills in the background"></div>
             </div>
             <div class="row justify-content-md-center">
-                <div class="col-md-8">
+                <div class="col-md-10 col-lg-8">
                     <p>12 hours later I emerged from the cabin into Euston in full morning swing: queues at the barriers, queues on the concourse. Though in the end (and after days of deliberation) I had to decline the job, the brief trip marked a first of many to the highlands of Scotland. It was an introduction to this beautiful and remote part of Britain, a part I’ve grown fond of and need little excuse to visit. I’ve since found my way there via all means of transport, recently having flown for reasons specific to timing. Travel by train however, especially through the night, is by far the most preferable should one have the option. It’s certainly the most conducive to making an escape from the city: under the cover of darkness, carried off through the night. To greet from the pillow this bewilderingly uncluttered and dramatic landscape is a fine introduction; to wake up transported into the wide and wintery northwest.</p>
                     <p class="author">Words by Eva Diaz</p>
                     <p>Images by Western Regional Archives, State Archives of North Carolina.</p>
@@ -81,27 +81,20 @@
 
         <section>
             <div class="row justify-content-center">
-                <div class="col-md-7">
-                    <div class="comments-container"></div>
+                <div class="col-md-10 col-lg-8">
+                    <div class="wrapper-comments-container">
+                        <a href="#" title="Comment Here">Comment Here</a>
+                        <div class="comments-container"></div>
+                    </div>
                 </div>
             </div>
-            <script id="commentsTemplate" type="text/x-handlebars-template">
-                <a href="#" title="Comment Here">Comment Here</a>
-                {{#each this}}
-                    <div class="comments-container__comment">
-                        <div class="row"><div class="col comments-container__comment__user-details"><p>{{author}} <span>{{formatDate timeStamp}}</span></p></div></div>
-                        <div class="row"><div class="col comments-container__comment__user-comment">{{{comment}}}</div></div>
-                        <div class="row"><div class="col comments-container__comment__user-controls"><a href="#" title="reply">reply</a></div></div>
-                    </div>
-                {{/each}}
-            </script>
         </section>
 
         <section class="newsletter-signup">
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center">
                     <h4>Keep up with our latest articles and news</h4>
-                    <form id="signUp" action="https://www.peterwilmshurst.co.uk" onsubmit = "return(validate());">
+                    <form id="signUp" action="https://www.peterwilmshurst.co.uk" onsubmit="return(validate());">
                         <input type="email" class="form-control email-signup" placeholder="enter your email" id="email-address" />
                         <div id="formError" class="form-error"></div>
                         <input type="submit" class="btn btn-signup" value="Sign Up" id="submit-btn" />
